--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Pet Clinic Index</title>
+    <title>List of Vets</title>
 </head>
 <body>
-    <h1>Index Page</h1>
+<h1>List of Vets...</h1>
 </body>
 </html>
